@startuml

title __FINALWITHDB's Class Diagram__\n

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.ClassList {
        ~ ClassKeyArray : ArrayList<String>
        ~ ClassListView : ListView
        ~ ClassNameArray : ArrayList<String>
        ~ database : FirebaseDatabase
        ~ myRef : DatabaseReference
        # onCreate()
        # onResume()
        - setClassAdapter()
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.IndividualPage {
        ~ AssignmentString : ArrayList<String>
        # onCreate()
        # onResume()
        - setIndividualAdapter()
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.MainActivity {
        - calendarRecyclerView : RecyclerView
        - monthYearText : TextView
        + nextMonthAction()
        + onItemClick()
        + previousMonthAction()
        + weeklyAction()
        # onCreate()
        - initWidgets()
        - setMonthView()
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.PopUpForClasslist {
        # onCreate()
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.PopUpForIndividual {
        # onCreate()
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.PopUpForStudentlist {
        # onCreate()
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.Splashscreen {
        # onCreate()
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.StudentList {
        ~ ClassKey : String
        ~ StudListView : ListView
        ~ StudNameArray : ArrayList<String>
        # onCreate()
        # onResume()
        - setStudentAdapter()
    }
  }
  

  com.example.finalwithdb.ClassList -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.IndividualPage -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.MainActivity .up.|> com.example.finalwithdb.Calendar.CalendarUtils.CalendarAdapter.OnItemListener
  com.example.finalwithdb.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.PopUpForClasslist -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.PopUpForIndividual -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.PopUpForStudentlist -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.Splashscreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.StudentList -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
